--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -390,7 +390,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Model Evaluation**\n",
+    "**Model Evaluation for Open and Close Prices.**\n",
     "\n",
     "By use of Linear Regression model, we will evaluate the model using the Mean Squared Error and R2 Score."
    ],
@@ -476,6 +476,157 @@
    },
    "id": "bedf1c0f50357675",
    "execution_count": 9
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The predicted Close price of Google for the next month is 145.43 . "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2f4c2b3b302cbc1c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Model Building for Open and Close Prices**\n",
+    "\n",
+    "This model will be able to predict the Open and Close stock prices of Google for the next month.  "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dd86d2f381925cd"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4d57838e43e237cc"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Model Evaluation for Low and High Prices**\n",
+    "\n",
+    "Let us shift to Low and High stock prices. We will build a model that predicts the Low and High stock prices of\n",
+    "Google for the next month."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7639a47176ccc56a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(188, 1) (48, 1) (188, 1) (48, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = data['Low_EMA']\n",
+    "y= data['High_EMA']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_train = X_train.values.reshape(-1, 1)\n",
+    "X_test = X_test.values.reshape(-1, 1)\n",
+    "y_train = y_train.values.reshape(-1, 1)\n",
+    "y_test = y_test.values.reshape(-1, 1)\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T09:03:50.718721Z",
+     "start_time": "2024-03-30T09:03:50.674183Z"
+    }
+   },
+   "id": "ddfaef9629b79f06",
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 3.6847878978149606\n",
+      "R2 Score: 0.9980695974481344\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print('Mean Squared Error:', mse)\n",
+    "print('R2 Score:', r2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T09:05:22.805089Z",
+     "start_time": "2024-03-30T09:05:22.761773Z"
+    }
+   },
+   "id": "2f1bb50ffbc182aa",
+   "execution_count": 11
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The MSE is at 3.68 as R2 score is at 0.998. The model is accurate. We can now predict the Low and High stock\n",
+    "of Google for the next month."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1bb7f759a1696f44"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted High Price: 158.0850400628238\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_new = np.array([data['Low_EMA'].iloc[-1]])\n",
+    "\n",
+    "y_new = model.predict(X_new.reshape(-1, 1))\n",
+    "\n",
+    "print('Predicted High Price:', y_new[0][0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T09:07:05.954506Z",
+     "start_time": "2024-03-30T09:07:05.948685Z"
+    }
+   },
+   "id": "98ca6e4304b60e28",
+   "execution_count": 12
   }
  ],
  "metadata": {
