--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -490,7 +490,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Model Building for Open and Close Prices**\n",
+    "**Model Deployment for Open and Close Prices**\n",
     "\n",
     "This model will be able to predict the Open and Close stock prices of Google for the next month.  "
    ],
@@ -501,12 +501,30 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['google_stock_open_close_model.pkl']"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(model, 'google_stock_open_close_model.pkl')"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T09:28:24.179093Z",
+     "start_time": "2024-03-30T09:28:24.147711Z"
+    }
    },
-   "id": "4d57838e43e237cc"
+   "id": "4d57838e43e237cc",
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
