--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -465,7 +465,7 @@
     "\n",
     "y_new = model.predict(X_new.reshape(-1, 1))\n",
     "\n",
-    "print('Predicted Close Price:', y_new[0][0])"
+    "print('Predicted Open Price:', y_new[0][0])"
    ],
    "metadata": {
     "collapsed": false,
@@ -476,6 +476,34 @@
    },
    "id": "bedf1c0f50357675",
    "execution_count": 9
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Close Price: 166.46276632412554\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_new = np.array([data['Close_EMA'].iloc[-1]])\n",
+    "\n",
+    "y_new = model.predict(X_new.reshape(-1, 1))\n",
+    "\n",
+    "print('Predicted Close Price:', y_new[0][0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T09:30:20.231259Z",
+     "start_time": "2024-03-30T09:30:20.195230Z"
+    }
+   },
+   "id": "e4d6a007a7289f64",
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -625,7 +653,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted High Price: 158.0850400628238\n"
+      "Predicted Low Price: 158.0850400628238\n"
      ]
     }
    ],
@@ -634,17 +662,81 @@
     "\n",
     "y_new = model.predict(X_new.reshape(-1, 1))\n",
     "\n",
+    "print('Predicted Low Price:', y_new[0][0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T09:29:45.433803Z",
+     "start_time": "2024-03-30T09:29:45.418539Z"
+    }
+   },
+   "id": "98ca6e4304b60e28",
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted High Price: 170.93878459389265\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_new = np.array([data['High_EMA'].iloc[-1]])\n",
+    "\n",
+    "y_new = model.predict(X_new.reshape(-1, 1))\n",
+    "\n",
     "print('Predicted High Price:', y_new[0][0])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-30T09:07:05.954506Z",
-     "start_time": "2024-03-30T09:07:05.948685Z"
+     "end_time": "2024-03-30T09:29:49.529667Z",
+     "start_time": "2024-03-30T09:29:49.505769Z"
     }
    },
-   "id": "98ca6e4304b60e28",
-   "execution_count": 12
+   "id": "c5b21b1cc8ede733",
+   "execution_count": 16
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The predicted Low price of Google for the next month is 158.085 and the High price is 170.94.\n",
+    "Let's deploy the model."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "15f225eed83a3119"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['google_stock_low_high_model.pkl']"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, 'google_stock_low_high_model.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T09:31:33.678909Z",
+     "start_time": "2024-03-30T09:31:33.665301Z"
+    }
+   },
+   "id": "14b3416d1892907c",
+   "execution_count": 18
   }
  ],
  "metadata": {
