--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -737,6 +737,21 @@
    },
    "id": "14b3416d1892907c",
    "execution_count": 18
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Conclusion***\n",
+    "\n",
+    "We have successfully built a model that predicts the stock price of Google for the next month. The model for Open\n",
+    "and Close stock prices has a Mean Squared Error of 6.022 and R2 score of 0.996. The model for Low and High stock\n",
+    "prices has a Mean Squared Error of 3.68 and R2 score of 0.998. The models are accurate and can be used to predict\n",
+    "the stock prices of Google for the next month."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "beb92c92d82ec83d"
   }
  ],
  "metadata": {
