--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "****GOOGLE MONTHLY STOCK PREDICTION****\n",
+    "***GOOGLE MONTHLY STOCK PREDICTION****\n",
     "\n",
     "Using the dataset from kaggle.com. I will use it to build a model that predicts the stock price of Google for the \n",
     "next month. The dataset contains 4 mainly needed columns to complete the prediction. Opening and Closing of stock \n",
