--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -950,12 +950,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "5acd764e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-30T14:50:44.723068Z",
-     "start_time": "2024-03-30T14:50:42.510749Z"
+     "end_time": "2024-03-30T14:59:54.827122Z",
+     "start_time": "2024-03-30T14:59:54.797804Z"
     }
    },
    "outputs": [
@@ -966,18 +966,13 @@
       "Shape of X_train: (279, 8)\n",
       "Shape of X_test: (70, 8)\n",
       "Shape of y_train: (279,)\n",
-      "Shape of y_test: (70,)\n",
-      "Accuracy: 77.14%\n"
+      "Shape of y_test: (70,)\n"
      ]
     }
    ],
    "source": [
     "#import of needed libraries\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "model = RandomForestClassifier()\n",
     "\n",
     "#splitting the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -985,16 +980,43 @@
     "print(f'Shape of X_train: {X_train.shape}')\n",
     "print(f'Shape of X_test: {X_test.shape}')\n",
     "print(f'Shape of y_train: {y_train.shape}')\n",
-    "print(f'Shape of y_test: {y_test.shape}')\n",
+    "print(f'Shape of y_test: {y_test.shape}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 78.57%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "#Training the model\n",
+    "model = RandomForestClassifier()\n",
+    "\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "#Evaluate the model\n",
+    "\n",
     "y_pred = model.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
     "print(f'Accuracy: {accuracy*100:.2f}%')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T14:59:48.629676Z",
+     "start_time": "2024-03-30T14:59:46.251648Z"
+    }
+   },
+   "id": "4341d3f9ae683fa4",
+   "execution_count": 24
   },
   {
    "cell_type": "code",
